@@ -44,7 +44,7 @@ h1#project-header a {
 }
 
 table .IterationTitle th {
-  background: url(++resource++xm.theme.images/iterationBG.jpg) repeat-x;
+  background: url(++resource++xm.theme.images/IterationBG.jpg) repeat-x bottom;
   white-space: nowrap;
   font-weight: bold;
 }
@@ -97,4 +97,12 @@ table .IterationTitle a {
   background-color: #EDEBEB;
   padding: 6px 3px;
   font-size: 110%;
+}
+
+table.employees-overview td {
+  padding: 4px;
+}
+
+.employees-overview .name-employee {
+  white-space: nowrap;
 }
